# crm_system

./: pyproject.toml
crm/: settings.py
main/: urls.py  views.py
